--- a/module-4/sml-4-case-study-python.qmd
+++ b/module-4/sml-4-case-study-python.qmd
@@ -1,6 +1,6 @@
 ---
 title: 'Modeling Interactions Data with Boosted Trees'
-subtitle: "Case Study"
+subtitle: "Case Study Key"
 author: "LASER Institute"
 date: today 
 format:
@@ -17,19 +17,36 @@ resource_files:
 - img/tidymodels.png
 ---
 
+```{r}
+#| include: false
+reticulate::py_install("pandas")
+reticulate::py_install("pyarrow")  # for parquet support
+reticulate::py_install("numpy")
+reticulate::py_install("statsmodels")
+reticulate::py_install("scikit-learn")
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 ```
 
 ## 1. PREPARE
 
-After interpreting our last model, it is easy to think we can do a little better. But, how? In this module, we attempt to improve our predictive performance by **switching from a random‑forest model to a boosted‑tree model (using *xgboost*)** and by carrying out some targeted feature engineering.
+After interpreting our last model, it is easy to think we can do a little better. But, how? In this module, we'll do do things: 1) specify a more sophisticated model and 2) go deeper on some feature engineering.
 
-Boosted trees (gradient boosting) build a *sequence* of small trees, each one focusing on the records the previous trees struggled with. When tuned carefully (small learning rate, many trees) the ensemble can outperform bagged methods such as random forests.
+Our driving question for this module, then, is: **How much can we improve our model?** Looking back to our predictive model from module 3, we can see that our accuracy was okay. Can we improve on that? Let's dive in! First, we'll briefly review two key concepts for the module.
+
+### A more sophisticated model
+
+we attempt to improve our predictive performance by switching to a more complex model than the logistic regression we have been using–specifically, to a type of model that is based on decision trees – a boosted‑tree model. In short, this is one way we can improve our model's predictions.
+
+Boosted trees (gradient boosting) build a *sequence* of small "decision trees" (detailed in the conceptual overview), each one focusing on the records the previous trees struggled with. When tuned carefully (small learning rate, many trees) the ensemble can outperform other algorithms based on decision trees you may have heard of, like the random forest algorithm.
+
+### A little background (and some readings) on feature engineering
 
 Feature engineering is a rich topic in machine learning research, including in the learning analytics and educational data mining communities.
 
-Consider research on online learning and the work of Rodriguez et al. (2021). In these two studies, *digital trace data*, data generated through users' interactions with digital technologies. Optionally, review this paper -- specifically how they processed the "clickstream" data. As this paper illustrates, there is not one way to use such data.
+Consider research on online learning and the work of Rodriguez et al. (2021). In this study, *digital trace data*, data generated through users' interactions with digital technologies. Optionally, review this paper -- specifically how they processed the "clickstream" data. As this paper illustrates, there is not one way to use such data.
 
 > Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., & Warschauer, M. (2021, April). Using clickstream data mining techniques to understand and support first-generation college students in an online chemistry course. In *LAK21: 11th International Learning Analytics and Knowledge Conference* (pp. 313-322).
 
@@ -39,154 +56,158 @@ Notably, the authors took several steps to prepare the data so that it could be 
 
 Even after feature engineering, machine learning approaches can often (but not always) be improved by choosing a more sophisticated model type. Note how we used a regression model in the first two case studies; here, we explore a considerably more sophisticated model, a boosted tree. Feature engineering and choosing a more sophisticated model adds some complexity to the modeling. As we have discussed, it is easy to bias our results if we repeatedly check the performance of *different model fits* with the same test data. Cross-validation is one commonly used solution for this problem.
 
-Our driving question is: **How much can we improve our model?** Looking back to our predictive model from LL 2, we can see that our accuracy was okay. Can we improve on that? Let's dive in!
-
 ## 2. WRANGLE
 
 ## Step 0: Loading and setting up
 
-First, let's load the packages we'll use---the familiar {tidyverse} and several others focused on modeling.
+First, let's load the packages we'll use---the familiar pandas and several others focused on modeling.
 
 #### **👉 Your Turn** **⤵**
 
 Add to the chunk below code to load:
 
--   **tidyverse**, **janitor**, **tidymodels**
--   **xgboost** (boosted‑tree engine)
--   **vip** (variable importance plots)
+-   **pandas** for data wrangling (as "pd")
+-   **matplotlib.pyplot** (as "plt")
 
-Load these with the library function, per usual.
+Load these with the import function, per usual.
 
-```{r}
-
+```{python}
 
 ```
 
-Next, we'll load a new file --- one with *interactions* (or log-trace) data. Please find that in the `data` folder for this lab, read that in and assign it the name `interactions`.
+Next we'll load a few more libraries for modeling and analysis.
 
-```{r}
+```{python}
+import statsmodels.formula.api as smf
 
+from sklearn.model_selection import StratifiedKFold, cross_validate, train_test_split
+from sklearn.pipeline import Pipeline
+from sklearn.impute import KNNImputer, SimpleImputer
+from sklearn.ensemble import GradientBoostingClassifier
+from sklearn.metrics import accuracy_score, precision_score, confusion_matrix, cohen_kappa_score, make_scorer
+from sklearn.compose import ColumnTransformer
+from sklearn.preprocessing import OneHotEncoder, StandardScaler
 ```
 
-We have to do the same processing we did in the third module, to obtain cut-off dates. As a reminder, the purpose of this is to train the model on data from the first one-third of the class, with the reasoning being this is a good time to intervene--far enough into the class to make an appreciable impact, but not too late to have a limited chance of being able to change students' trajectory in the class.
+Let's get started! We have to do the same processing we did in the third module to obtain cut-off dates. The purpose of this is to train the model on data from the first one-third of the class, with the reasoning being this is a good time to intervene—-far enough into the class to make an appreciable impact, but not too late to have a limited chance of being able to change students' trajectory in the class. We'll repeat the procedure we carried out with the assessments data: calculating a cut-off for each class and then filtering the data based upon this cut-off.
 
-We'll repeat the procedure we carried out with the assessments data --- calculating a cut-off for each class and then filtering the data based upon this cut-off. But, since we've already done this for the assessment data, to allow us to focus more on some new feature engineering steps in this module, we are providing you with the already-filtered interactions data. *Note*: you can find the code used to carry out these steps in the Module 4 folder in `process-interactions-data.R`.
+First, though, we need to load *a really big file* with all of the interactions data — one with interactions (or log-trace) data. In the OULAD documentation, this is called the VLE (virtual learning environment) data source. Please review the description of the variables in the *studentVLE* and *VLE* sources (which are joined together for this module) [here](https://analyse.kmi.open.ac.uk/open_dataset#description).
 
-Please load `oulad-interactions-filtered.csv` into R, assigning the resulting data frame the name `interactions`.
+The data is in a file named `oulad-interactions.parquet` file. You’ll find this in the `data` folder. Why this format? Parquet is a modern, columnar storage format that is highly efficient for large datasets. It allows for compressed storage and faster reading, especially when you only need a subset of columns. If we had stored this same data in a plain-text format like CSV, it would have taken up significantly more space — potentially too much to include in this lab's repository at all.
+
+The tradeoff is that Parquet files aren’t immediately human-readable and can’t be opened directly in Excel. However, for programmatic analysis with tools like Python and Pandas, it’s an excellent option: compact, fast, and well-suited for large-scale data.
+
+Now let’s load it:
+
+```{python}
+interactions_df = pd.read_parquet("data/oulad-interactions.parquet")
+```
+
+We can see that this file is indeed large - more than 10 million rows, with data on the number of *clicks* (`sum_clicks)` a student in a particular offering of a course makes with a particular component of the course (`id_site`) and the type of that component (`activity_type`). at a specific time.
+
+Since you did something similar in the last module, you'll just run the code in the chunk below to calculate and filter the data based on a cut-off point (and associated date).
+
+```{python}
+
+assessments_df = pd.read_csv("data/oulad-assessments.csv")
+
+code_module_dates_df = (
+    assessments_df
+    .groupby(['code_module', 'code_presentation'])['date']
+    .quantile(0.25)
+    .reset_index(name='quantile_cutoff_date')  # this just cleans up the naming of the summary statistic
+)
+
+interactions_joined_df = pd.merge(
+    left=interactions_df, 
+    right=code_module_dates_df,
+    on=['code_module', 'code_presentation'],
+    how='left'
+)
+
+interactions_filtered_df = interactions_joined_df.query('date < quantile_cutoff_date')
+```
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+Now, use the `head()` method on the filtered data set you just created.
 
-
+```{python}
 
 ```
 
-In the OULAD documentation, this is called the VLE (virtual learning environment) data source. Please review the description of the variables in the *studentVLE* and *VLE* sources (which are joined together for this module) [here](https://analyse.kmi.open.ac.uk/open_dataset#description). Then, read in the `oulad-interactions.csv` file.
+What do you notice about this data in relation to the original data set? You may wish to `info()` (or inspect in another way) the not filtered interactions data, too. Share a few notes on what you observe about these:
 
-Also, we'll load another file we created in the last module - `oulad-students_and_assessments.csv`. That is in this module's data folder; please load this in with `read_csv()`, as below.
+-   
 
-```{r}
-students_and_assessments <- read_csv("data/oulad-students-and-assessments.csv")
+-   
+
+We will not only use this (filtered) interactions data, but also data on students and assessments. Here, we'll be expeditious by loading a file we created in the last module - `oulad-students_and_assessments.csv`. That is in this module's data folder; please load this in with `read_csv()`, as below.
+
+#### **👉 Your Turn** **⤵**
+
+```{python}
+
 ```
-
-Woah, even filtered, this is a large file! Let's start to explore it a bit. Please take three steps to explore the data, as follows.
 
 ## 3. EXPLORE
 
 #### **👉 Your Turn** **⤵**
 
-*First*, `count()` the `activity_type` variable and *sort* the resulting output by frequency.
+*First*, use the `value_counts()` method on the `activity_type` variable in your filtered interactions data
 
-```{r}
+```{python}
 
 ```
 
 What does this tell you? Consulting the codebook and your output, please add at least two notes on what you are noticing:
 
--   ADD YOUR RESPONSE HERE
+-   
+-   
 
 #### **👉 Your Turn** **⤵**
 
 *Second*, please create a histogram of the `date` variable.
 
-```{r}
+```{python}
 
 ```
 
 What does this tell you? Add one or more notes:
 
--   ADD YOUR RESPONSE HERE
+-   The distribution shows interaction patterns over time, with some peaks and valleys suggesting different activity levels throughout the course
 
 #### **👉 Your Turn** **⤵**
 
-*Third*, please conduct one other data exploration step of your choosing. Options include creating simple graphgs or calculating descriptive, summary statistics.
+*Third*, please conduct one other data exploration step of your choosing. Options include creating simple graphs or calculating descriptive, summary statistics.
 
-```{r}
+```{python}
 
 ```
 
-We're ready to proceed to engineering some features with the interactions data.
+We're ready to proceed to engineering some features with the interactions data. For the present time, we'll focus on the `sum_click` variable, which tells us how many times students clicked on a resource for a given date.
 
-First, let's join together the `interactions` and the `code_module_dates` data frames.
-
-We'll use the same code to create the `code_module_dates` we used in LL2.
-
-```{r}
-assessments <- read_csv("data/oulad-assessments.csv")
-
-code_module_dates <- assessments %>% 
-    group_by(code_module, code_presentation) %>% 
-    summarize(quantile_cutoff_date = quantile(date, probs = .25, na.rm = TRUE))
-```
-
-This is so we have the cut-offs (one-third through the semester), which will help us to only use data from that period in our model when we filter the data based upon those dates.
-
-```{r}
-interactions_joined <- interactions %>% 
-  left_join(code_module_dates) # join the data based on course_module and course_presentation
-
-interactions_filtered <- interactions_joined %>% 
-  filter(date < quantile_cutoff_date) # filter the data so only assignments before the cutoff date are included
-```
-
-Then, let's engineer several features. For the present time, we'll focus on the `sum_click` variable, which tells us how many times students clicked on a resource for a given date. We'll use the `interactions_filtered` data set we just created. Let's start simple: please type the name of that data set (`interactions_filtered`) in the code chunk below. Note, you may need to unzip this file!
+How can we create a feature with `sum_click`? Think back to our discussion in the presentation; we have *many* options for working with such time series data. Perhaps the most simple is to count the clicks. Please summarize the number of clicks for each student (specific to a single course). This means you will need to group your data by `id_student`, `code_module`, and `code_presentation`, and then create a summary variable. Assign the resulting output the name `interactions_summarized_df`. You may find the documentation for `groupby()` and `agg()` to be helpful. That is available [here](https://pandas.pydata.org/pandas-docs/version/0.22/generated/pandas.core.groupby.DataFrameGroupBy.agg.html). A useful hint is to use named variables in the `agg` function; e.g., `agg(sum_clicks=('sum_click', 'sum'), ...)` to avoid renaming columns in a later step.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
-
-```
-
-How can we create a feature with `sum_click`? Think back to our discussion in the presentation; we have *many* options for working with such time series data. Perhaps the most simple is to count the clicks. Please summarize the number of clicks for each student (specific to a single course). This means you will need to group your data by `id_student`, `code_module`, and `code_presentation`, and then create a summary variable. Assign the resulting output the name `interactions_summarized`. You may find the documentation for `summarize()` to be helpful. That is available [here](https://dplyr.tidyverse.org/reference/summarise.html). [This chapter](https://r4ds.had.co.nz/transform.html) is also likely helpful (note that `summarise()` and `summarize()` are different spellings for the same function).
-
-#### **👉 Your Turn** **⤵**
-
-```{r}
+```{python}
 
 ```
 
 #### **👉 Your Turn** **⤵**
 
-How many times did students click? Let's create a histogram to see. Please use {ggplot} and `geom_histogram()` to visualize the distribution of the `sum_clicks` variable you just created. Turn to [the documentation](https://ggplot2.tidyverse.org/reference/geom_histogram.html) if you need a pointer!
+How many times did students click? Let's create a histogram to see. Please use `plt.hist` to visualize the distribution of the `sum_clicks` variable you just created. Turn to the [documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html) if you need a pointer!
 
-```{r}
-
-```
-
-#### [Your Turn]{style="color: green;"} ⤵
-
-How many times did students click? Let's create a histogram to see. Please use {ggplot} and `geom_histogram()` to visualize the distribution of the `sum_clicks` variable you just created. Turn to [the documentation](https://ggplot2.tidyverse.org/reference/geom_histogram.html) if you need a pointer!
-
-```{r}
+```{python}
 
 ```
 
-This is a good start - we've created our first feature based upon the log data, `sum_clicks`! What are some other features we can add? An affordance of using the `summarize()` function in R is we can create multiple summary statistics at once. Let's also calculate the standard deviation of the number of clicks as well as the mean. Please copy the code you wrote above into the code chunk below and then add these two additional summary statistics.
+This is a good start - we've created our first feature based upon the log data, `sum_clicks`! What are some other features we can add? An affordance of using the `agg()` function in Python is we can create multiple summary statistics at once. Let's also calculate the standard deviation of the number of clicks as well as the mean. Please copy the code you wrote above into the code chunk below and then add these two additional summary statistics.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+```{python}
 
 ```
 
@@ -194,80 +215,56 @@ We'll take one last step here -- creating individual *slopes* of students' click
 
 First, we use a custom function that can deal with cases where the fitting of the slopes fails (e.g., for students with only a single data point, or some other unanticipated issue with the model estimation).
 
-```{r}
-# Define a function to fit the model and handle warnings
-fit_model <- function(data) {
-    tryCatch(
-        { 
-            # Fit a linear model with sum_click as the response and date as the predictor
-            model <- lm(sum_click ~ date, data = data)
-            # Tidy the model output (convert to a tidy data frame)
-            tidy(model) 
-        },
-        # Handle errors: return a tibble with NA values
-        error = function(e) { tibble(term = NA, estimate = NA, std.error = NA, statistic = NA, p.value = NA) },
-        # Handle warnings: return a tibble with NA values
-        warning = function(w) { tibble(term = NA, estimate = NA, std.error = NA, statistic = NA, p.value = NA) }
-    )
-}
+```{python}
+def get_slope_and_intercept(data: pd.DataFrame) -> pd.Series:  # These extra bits of info (e.g., "-> pd.Series:") are type hints -- a useful, optional tool that tells the function's user what comes in and goes out. 
+    try:
+        # Fit a linear model with sum_click as the response and date as the predictor
+        model = smf.ols('sum_click ~ date', data=data).fit()
+        # Extract the model parameters for the Intercept and the slope of the date predictor
+        return pd.Series({
+            'intercept': model.params['Intercept'],
+            'slope': model.params['date']
+        })
+    except Exception:
+        # When fitting a slope fails, return an empty Pandas Series
+        return pd.Series({'intercept': None, 'slope': None})
 ```
 
 **Note: this next step may take up to a minute or so! Please feel free to relax!**
 
-```{r}
-# Fit the models for each group
-interactions_slopes <- interactions_filtered %>%
-    group_by(id_student, code_module, code_presentation) %>% # Group by student and course
-    nest() %>% # Nest the data frame, creating a list of data frames for each group
-    mutate(model = map(data, fit_model)) %>% # Apply the fit_model function to each nested data frame
-    unnest(model) # Unnest the model output, returning to a regular data frame
+```{python}
+model_params_df = (
+    interactions_filtered_df
+    .groupby(['id_student', 'code_module', 'code_presentation'])
+    .apply(get_slope_and_intercept)
+    .reset_index()
+)
+model_params_df = model_params_df.round(4)  # Reduce the precision of the slopes and intercepts
 ```
 
-We'll do a bit of data wrangling.
-
-```{r}
-# Process the output
-interactions_slopes <- interactions_slopes %>%
-    ungroup() %>% # Remove grouping
-    select(code_module, code_presentation, id_student, term, estimate) %>% # Select relevant columns
-    filter(!is.na(term)) %>% # Filter out rows where term is NA
-    spread(term, estimate) %>% # Spread the terms into separate columns
-    mutate_if(is.numeric, round, 4) # Round numeric columns to 4 decimal places
-```
-
-Please rename the resulting intercept and date, changing them`intercept` and `slope`, respectively. Note, selecting a variable with a parenthesis in it can be tricky! Think of other ways you could do this, if you wish (hint: think of what a function in janitor can do!).
+Let's use `pd.merge()` to left join the slopes and intercepts into the `interactions_summarized_df` feature dataset. Name the new DataFrame `interactions_summarized_and_slopes_df`.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+```{python}
 
 ```
 
-After running this code, we will have intercepts, linear slopes, and quadratic terms for each students' clickstream pattern over the semester.
-
-Let's join together several files. First, let's join all our features into a single file. Please use `left_join()` to join `interactions_summarized` and `interactions_slopes`, assigning the resulting output the name `interactions_summarized_and_slopes`.
-
-#### [Your Turn]{style="color: green;"} ⤵
-
-```{r}
-
-```
-
-Just one last step! Let's join together *all* of the data we'll use for our modeling: `students_and_assessments` and `interactions_summarized_and_slopes`. Use `left_join()` once more, assigning the resulting output the name `students_assessments_and_interactions`. Lots of joining! Sometimes, the hardest part of complex analyses lies in the preparation (and joining) of the data.
+Let's join together all of our features into a single file. Please use `pd.merge()` to left join `students_and_assessments_df` and `interactions_summarized_and_slopes_df`, assigning the resulting output the name `students_assessments_and_interactions_df`.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+```{python}
 
 ```
 
-One more small step. Let's ensure that our outcome variable -- `pass` -- is a factor. It was, but when saving to and reading from a CSV, it lots its factor characteristics, becoming instead a character string. It is necessary for the outcome of a classification model (like the one we are using) to be a factor. Please use `mutate()` to do just that.
+Lots of joining! Sometimes, the hardest part of complex analyses lies in the preparation (and joining) of the data.
+
+Let's take a look at a few rows of your final dataset. Use the `describe()` function. If the numbers are in scientific notation, consider adding the `round` function to your call; e.g., `.round(2)`.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
-
-
+```{python}
 
 ```
 
@@ -277,155 +274,153 @@ We're now ready to model!
 
 ### Step 1. Split data
 
-We'll follow the same steps we followed in modules #2 and #3, here. One difference - we'll use `students_assessments_and_interactions` instead of the data frame we used in those modules. Please port over the code you used in those modules here, changing the name of the data frame to the one we are now using.
+We'll follow the same steps we followed in modules #2 and #3, here. One difference - we'll use `students_assessments_and_interactions_df` instead of the data frame we used in those modules. Please port over the code you used in those modules here, changing the name of the data frame to the one we are now using.
 
 We discuss this first step minimally as we have now carried out a step very similar to this in LL1 and LL2; return to the case study for those (especially LL1) for more on data splitting.
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+```{python}
 
 ```
 
-There is a key difference that is next. In this step. we'll further process `data_train`, creating different subsets of the data, or folds of the data, that we can use to fit our model multiple times.
+There is a key difference that is next. In this step. we'll further process `` `X_train` ``, creating different subsets of the data, or folds of the data, that we can use to fit our model multiple times. The first step is creating a `StratifiedKFold` object that we can use later in a process called cross-validation.
 
-```{r}
-vfcv <- vfold_cv(data_train) # this differentiates this from what we did before
-# before, we simple used data_train to fit our model
-vfcv
+```{python}
+skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=22790)
 ```
 
-How does this work? `data_train` is sampled as many time as we se \#### [Your Turn]{style="color: green;"} ⤵
+How does this work? `X_train` is sampled as many time as we set the `n_splits` parameter. What does this mean in practice? It means that we split our data into 5 equally sized “folds.” Each fold contains a mix of examples that mirrors the overall balance of our outcome variable (because we're using **stratified** folds).
 
-Above, we split the data into 10 different folds. Change the number of folds from 10 to 5 by changing the value of v; 10 is simply the default---not always the best one! For help, run `?vfold_cv` to get a hint.
+During cross-validation, our model will train on 4 of the folds and test on the 1 remaining fold**.** This process is repeated 5 times, each time rotating which fold is used as the test set.
 
-```{r}
-kfcv <- vfold_cv(data_train, v = 5) # this differentiates this from what we did before
-# before, we simple used data_train to fit our model
-kfcv
-```
+### Step 2: Engineer features and build preprocessing pipeline
 
-### Step 2: Engineer features and write down the recipe
+Here, we'll carry out several feature engineering steps as part of a scikit-learn `Pipeline`.
 
-Here, we'll carry out several feature engineering steps.
+-   [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html): normalizes numeric data to have a standard deviation of one and a mean of zero
+-   [SimpleImputer](https://scikit-learn.org/stable/modules/generated/sklearn.impute.SimpleImputer.html) and [KNNImputer](https://scikit-learn.org/stable/modules/generated/sklearn.impute.KNNImputer.html): impute missing values using a simple strategy or the nearest neighbors method
+-   [OneHotEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html): convert nominal data (e.g. character or factors) into one or more numeric binary model terms for the levels of the original data.
 
-Read about [possible steps](https://www.tmwr.org/recipes.html) and see more about how the following five feature engineering steps below work. Like in the previou slearning labs, this is the step in which we set the recipe.
+We will use all four of these in making a `Pipeline` for both categorical data and numerical data.
 
--   [`step_normalize()`](https://recipes.tidymodels.org/reference/step_normalize.html): normalizes numeric data to have a standard deviation of one and a mean of zero
--   [`step_dummy()`](https://recipes.tidymodels.org/reference/step_dummy.html): convert nominal data (e.g. character or factors) into one or more numeric binary model terms for the levels of the original data.
--   [`step_impute_knn()`](https://recipes.tidymodels.org/reference/step_impute_knn.html): impute missing alues using the nearest neighbors method
+```{python}
+categorical_transformer = Pipeline(steps=[
+    ("imputer", SimpleImputer(strategy='most_frequent')),
+    ("onehot", OneHotEncoder(drop="first", handle_unknown="ignore")),
+])
 
-We will use all three of these. Please note that there are two ways to use each of these. One of them is by *specifying the specific variable* you want to use for the feature engineering step. For example, below, we would normalize a hypothetical variable, one called `minutes_of_videos_watched`:
-
-```{r, eval = FALSE}
-step_normalize(minutes_of_videos_watched)
-```
-
-Another way is to specify *for which types of variables* the feature engineering step applies. You can see all of the available types [here](https://recipes.tidymodels.org/reference/has_role.html). For example, the code below would normalize all numeric variables:
-
-```{r, eval = FALSE}
-step_normalize(all_numeric_predictors())
+numerical_transformer = Pipeline(steps=[
+    ("imputer", KNNImputer(n_neighbors=5)),
+    ("scaler", StandardScaler()),
+])
 ```
 
 #### **👉 Your Turn** **⤵**
 
-Let's turn to our recipe. Please *add to* the code below to add the new variables---features---we created. We've started you off with \_\_\_ code below (where you can add the new variables -- be sure to add all of them!).
+Following the pattern from the Module-3 case study, combine the categorical and numerical columns into one preprocessor with the `ColumnTransformer`.
 
-```{r}
-my_rec <- recipe(pass ~ disability +
-                   date_registration + 
-                   gender +
-                   code_module +
-                   mean_weighted_score +
-                   ___ + ___ + ___ +
-                     ___ + ___,
-                 data = data_train) 
+The categorical features we will use in the model are: `disability`, `gender`, and `code_module`
+
+The numerical features are: `date_registration`, `mean_weighted_score`, `sum_clicks`, `std_clicks`, `mean_clicks`, `intercept` and `slope`
+
+```{python}
+
 ```
+
+### Step 3: Specify the model and complete the Pipeline
 
 #### **👉 Your Turn** **⤵**
 
-Then, please *add to* the following code by completing three steps, building on the code that is started below:
+Then, please *add the preprocessor to the scikit-learn `GradientBoostingClassifier` in a final `Pipeline` named `model_pipeline`*. We will start with some good baseline parameters for the classifier: `learning_rate=0.05, n_estimators=1000, max_depth=4`.
 
-1.  Please normalize all numeric predictors.
-2.  Please dummy code the following three variables: `disability`, `gender`, and `code_module`.
-3.  Please impute missing values using the nearest neighbors method for the `mean_weighted_score`, `sum_clicks`, `sd_clicks`, `mean_clicks`, `intercept`, `slope`, and `date_registration` variables.
-
-```{r}
+```{python}
 
 ```
 
-### Step 3: Specify the model and workflow
-
-Next, we specify the model and workflow, using the same engine *but a different engine and mode*, here, regression for a *continuous outcome*. Specifically, we are:
-
--   using the `random_forest()` function to set the *model* as a random forest
--   using `set_engine("ranger", importance = "impurity")` to set the *engine* as that provided for random forests through the {ranger} package; we also add the `importance = "impurity"` line to be able to interpret a particular variable importance metric specific to random forest models
--   finally, using `set_mode("classification"))` as we are again predicting categories
-
-```{r panel-chunk-3, echo = TRUE, eval = TRUE}
-
-# specify model
-my_mod <-
-  boost_tree(learn_rate = 0.05, trees = 1000, tree_depth = 4) %>%  # boosted tree
-  set_engine("xgboost", importance = "gain") %>% # xgboost engine and a variable importance metric
-  set_mode("classification")
-
-# specify workflow
-my_wf <-
-  workflow() %>% # create a workflow
-  add_model(my_mod) %>% # add the model we wrote above
-  add_recipe(my_rec) # add our recipe we wrote above
-```
-
-**Why those defaults?**
-    **trees**: many small steps (1000)
-    **learn_rate**: 0.05 (smaller → less variance needs more trees)
-    **tree_depth**: shallow (4) to avoid over‑fitting
+**Why those defaults?** **n_estimators**: many small steps (1000) **learning_rate**: 0.05 (smaller → less variance needs more trees) **max_depth**: shallow (4) to avoid over‑fitting
 
 ### Step 4: Fit model
 
-Note that here we use the `kfcv` data and a different function - `fit_resamples()`, instead of `fit()`. This function is required when we have multiple folds of our sample, as we created using the vfcv function above. See more about this function [here](https://tune.tidymodels.org/reference/fit_resamples.html).
+In this step, we use the `cross_validate` function (instead of `cross_val_score`, which was used in the code-along) because it allows us to evaluate multiple performance metrics simultaneously during cross-validation. While `cross_val_score` is simpler and useful when you're only interested in a single scoring metric (like accuracy), it becomes limiting when you need a broader view of model performance. The trade-off is that `cross_validate` produces a more complex output, which often requires extra steps to process and interpret.
 
-```{r}
-class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # specify the same metrics as earlier
-fitted_model_resamples <- fit_resamples(my_wf, 
-                                        resamples = vfcv, 
-                                        metrics = class_metrics)
+```{python}
+scoring_methods = {
+    'accuracy': 'accuracy', 
+    'precision': 'precision',
+    'recall': 'recall', 
+    'cohen_kappa_score': make_scorer(cohen_kappa_score),
+}
+
+results = cross_validate(model_pipeline, X_train, y_train, cv=skf, scoring=scoring_methods)
+results_mean = pd.DataFrame(results).mean() # extra output processing
 ```
 
-Note that you have fit as many models as the value for `v` that you specified earlier. So, this may take some time. Take a walk, grab a snack, or make a cup of tea!
-
-Then, we can use the same `collect_metrics()` function we have used to inspect the predictive strength of the model. Please do that for `fitted_model_resamples`.
+Note that you have fit as many models as the value for `n_splits` that you specified earlier. So, this may take some time. Take a walk, grab a snack, or make a cup of tea!
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
+Ok, your model run is complete — let’s take a look at the results.
+
+Start by viewing the full output from cross_validate, which is stored in the results dictionary. This shows the metric scores (and optional timing info) for each fold of cross-validation. Type `results` below.
+
+```{python}
+
+```
+
+Then, check the `results_mean` object to see the average value of each metric across all folds. This provides a quick summary of overall model performance:
+
+```{python}
 
 ```
 
 We noted earlier that we may introduce bias when we evaluate different models against the same training data. The benefit of using the multiple folds - and fitting multiple models - is we can make changes to our features or model. Thus, if we decide to add a new feature, we can run the above steps, without concern about biasing our interpretation of how accurate our model is.
 
-That is, we can be unconcerned about inadvertently introducing bias until we reach the last step - fitting our last model. We can do that using the familiar `fit()` function, followed by `last_fit`. It is important to not make further changes after this point.
+That is, we can be unconcerned about inadvertently introducing bias until we reach the last step - fitting our last model. We can do that using the familiar `fit()` function.
 
-```{r}
-final_fit <- last_fit(my_wf, train_test_split, metrics = class_metrics)
+```{python}
+model_pipeline.fit(X_train, y_train)
 ```
 
 ### Step 5: Interpret accuracy
 
-fa Finally, collect the metrics for our final fit. *These* are the values that you should report as final. \#### [Your Turn]{style="color: green;"} ⤵
+Finally, let's calculate the metrics for our final fit. *These* are the values that you should report as final. First, we will calculate predictions on the test dataset.
 
-```{r}
-final_fit %>% 
-  collect_metrics()
+```{python}
+y_preds = model_pipeline.predict(X_test)
 ```
 
-We can see that `final_fit` is for a single fit: a boosted tree model with the best performing tuning parameters trained with the *entire* training set of data to predict the values in our (otherwise not used/"spent") testing set of data.
+Here we can use the `calculate_metrics` method from previous case studies.
+
+```{python}
+def calculate_metrics(y_actual, y_preds) -> dict: 
+    """Calculates a suite of model metrics and returns the values as a dictionary"""
+    accuracy = accuracy_score(y_actual, y_preds)
+    precision = precision_score(y_actual, y_preds, pos_label=1)
+    kappa = cohen_kappa_score(y_actual, y_preds)
+    
+    true_negative, false_positive, false_negative, true_positive = confusion_matrix(y_actual, y_preds).ravel()
+    
+    sensitivity = true_positive / (true_positive + false_negative)  # or the sklearn.metrics recall_score function
+    specificity = true_negative / (true_negative + false_positive)
+    
+    negative_predictive_value = true_negative / (true_negative + false_negative)
+
+    return {
+        "accuracy": accuracy,
+        "sensitivity": sensitivity,
+        "specificity": specificity,
+        "precision": precision,
+        "negative_predictive_value": negative_predictive_value,
+        "cohen_kappa": kappa
+    }
+```
+
+Apply the `calculate_metrics` function to the predictions (`y_pred`) and the actual values in the test data (`y_test`):
 
 #### **👉 Your Turn** **⤵**
 
-```{r}
-
+```{python}
 
 ```
 
@@ -433,18 +428,25 @@ We can see that `final_fit` is for a single fit: a boosted tree model with the b
 
 Another benefit of a boosted tree model is we can interpret variable importance metrics. Do that here with the following code.
 
-```{r}
-final_fit %>% 
-  pluck(".workflow", 1) %>%   
-  extract_fit_parsnip() %>% 
-  vip(num_features = 10)
+```{python}
+model = model_pipeline.named_steps['model']
+importances = model.feature_importances_
+
+# Get categorical and numerical names from the fitted preprocessor
+preprocessor = model_pipeline.named_steps['preprocessor']
+categorical_names = preprocessor.named_transformers_['cat'] .named_steps['onehot'].get_feature_names_out(categorical_features)
+numerical_names = numerical_features
+all_feature_names = list(categorical_names) + numerical_names
+
+# Build output Series
+feature_importances = pd.Series(importances, index=all_feature_names)
+print(feature_importances.sort_values(ascending=False))
 ```
 
 Please add two or more notes on what you notice about which variables (features) are important, focused on what you would say to someone in your audience about what the important variables in your model were.
 
--   ADD YOUR RESPONSE HERE
-
--   ADD YOUR RESPONSE HERE
+-   The mean weighted score remains the most important predictor, similar to the random forest model
+-   The interaction features (sum_clicks, mean_clicks, etc.) show varying levels of importance, indicating that student engagement patterns do contribute to predicting success
 
 ### 🧶 Knit & Check ✅
 
