--- a/module-1/sml-1-case-study.qmd
+++ b/module-1/sml-1-case-study.qmd
@@ -9,7 +9,7 @@ format:
     toc-depth: 4
     toc-location: right
 theme:
-  light: simplex
+  light: simplexknit
   dark: cyborg
 editor: visual
 ---
